--- a/source/css/index.styl
+++ b/source/css/index.styl
@@ -187,6 +187,7 @@ code {
   color: $orange;
   padding: 0.125em 0.25em;
   overflow: auto;
+  word-warp: break-word;
   font-size: 1em;
   border-radius: $corner-radius;
   font-family: $font-mono;
